--- a/java/Redis/面试题.md
+++ b/java/Redis/面试题.md
@@ -16,7 +16,7 @@
 
 #### 5.SDS的作用
 
-可以在O(1)时间复杂度获取到字符串的长度，并且在为SDS分配存储空间的时候也会多分配空间，方便对字符串的添加。**不再以'\0'作为判断标准，二进制安全，可以存一些二进制数据**
+可以在O(1)时间复杂度获取到字符串的长度，并且在为SDS分配存储空间的时候也会多分配空间，方便对字符串的添加。**不再以'\0'作为判断标准，而是以len长度判断，二进制安全（因为一些二进制文件，如图片、视频可能包括空字符），可以存一些二进制数据**
 
 #### 6.List是完全的先入先出吗
 
@@ -77,7 +77,7 @@ O(1)有size字段
 
 #### 16.为什么单线程还可以这么快
 
-1.内存数据库，对内存的操作速度本来就快 2.使用高效的数据结构存储对象，并且对象的底层数据结构也以节省内存，加快速度为主要思想而设计。3.多路复用机制，使其在网络IO操作可以并发处理大量客户端请求，实现高吞吐量
+1.内存数据库，对内存的操作速度本来就快 2.使用高效的数据结构存储对象，并且对象的底层数据结构也以节省内存，加快速度为主要思想而设计。3.多路复用机制监听多个socket，这样可以**让 Redis 不需要额外创建多余的线程来监听客户端的大量连接，降低了资源的消耗**
 
 #### 17.Redis6.0后引入多线程的原因，是默认开启的吗
 
@@ -241,6 +241,10 @@ hash表：
 - **优点**：确保访问到的键一定是有效的。
 
 - **缺点**：如果**过期键未被访问，可能会一直占用内存。**
+
+**3.定时删除**
+
+每个设置了过期时间的 key 都会在设置的时间到达时立即被删除。这种方法可以确保内存中不会有过期的键，但是它对 CPU 的压力最大，因为它需要为每个键都设置一个**定时器**。
 
 #### 34.1 内存淘汰策略
 
