--- a/java/网络编程/基本知识.md
+++ b/java/网络编程/基本知识.md
@@ -1,4 +1,4 @@
-### 基本知识
+## 1.基本知识
 
 端口号
 
@@ -43,3 +43,47 @@ tcp（下载软件、聊天、邮件）
 客户端：输出流 
 
 服务器端：输入流
+
+## 2.Socket编程
+
+用于实现网络通信，在客户端和服务器之间传输数据。
+
+#### 服务器端
+
+1. 创建 `ServerSocket`，绑定到指定端口。
+2. 调用 `accept()` 方法，等待客户端连接。
+3. 通过 `Socket` 获取输入流和输出流，进行数据交换。
+4. 关闭连接。
+
+#### 客户端
+
+1. 创建 `Socket`，连接到服务器。
+2. 通过 `Socket` 获取输入流和输出流，进行数据交换。
+3. 关闭连接。
+
+## 3.线程模型
+
+线程模型决定了如何处理并发连接和请求。
+
+### (1) **单线程模型**
+
+- 服务器只有一个线程，依次处理每个客户端请求。
+- **缺点**：无法处理并发请求，性能低下。
+
+### (2) **多线程模型**
+
+- 为每个客户端连接创建一个新线程。
+- **优点**：支持并发处理。
+- **缺点**：线程创建和销毁开销大，资源消耗高。
+
+### (3) **线程池模型**
+
+- 使用线程池管理线程，避免频繁创建和销毁线程。
+- **优点**：资源利用率高，性能更好。
+- **缺点**：线程池大小需要合理配置。
+
+### (4) **事件驱动模型（Reactor 模式）**
+
+- 使用非阻塞 I/O 和事件循环处理请求。
+- **优点**：高并发，资源消耗低。
+- **缺点**：编程复杂度高。
