--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -250,7 +250,7 @@ N：拟写入的新值(New)
 它的功能就是一次只原子地修改一个变量。当操作涉及跨多个共享变量时 CAS 无效
 ```
 
-#### 13.synchronized 关键字***
+#### 13.synchronized 关键字
 
 ```java
 主要解决的是多个线程之间访问资源的同步性，可以保证被它修饰的方法或者代码块在任意时刻只能有一个线程执行。
@@ -273,6 +273,14 @@ synchronized(类.class) 表示进入同步代码前要获得给定 Class 的锁
 synchronized 同步语句块(synchronized(this))的实现使用的是 monitorenter 和 monitorexit 指令，其中 monitorenter 指令指向同步代码块的开始位置，monitorexit 指令则指明同步代码块的结束位置。
 synchronized 修饰的方法并没有 monitorenter 指令和 monitorexit 指令，取得代之的确实是 ACC_SYNCHRONIZED 标识，该标识指明了该方法是一个同步方法
 ```
+
+##### synchronized关键字的底层原理
+
+**`monitorenter` 和 `monitorexit` 指令，其中 `monitorenter` 指令指向同步代码块的开始位置，`monitorexit` 指令则指明同步代码块的结束位置。**
+
+执行`monitorenter` 指令时，线程试图获取锁也就是获取 **对象监视器 `monitor`** 的持有权。
+
+在执行`monitorenter`时，会尝试获取对象的锁，如果锁的计数器为 0 则表示锁可以被获取，获取后将锁计数器设为 1 也就是加 1。
 
 ##### 13.1 Java单机并发控制
 
