--- a/计算机网络/应用层.md
+++ b/计算机网络/应用层.md
@@ -58,9 +58,18 @@
 ## 3.常见的流量限制技术
 
 - **固定窗口**：在固定时间窗口内限制请求数量。
+  - 假如我们规定系统中某个接口 1 分钟只能被访问 33 次的话，使用固定窗口计数器算法的实现思路如下：将时间划分固定大小窗口，这里是 1 分钟一个窗口。一分钟之内每处理一个请求count+1
+  - 缺点：
+    - 限流不够平滑。例如，我们限制某个接口每分钟只能访问 30 次，假设前 30 秒就有 30 个请求到达的话，那后续 30 秒将无法处理请求
+    - 无法保证限流速率，即应对突然激增的流量
 - **滑动窗口**：在滑动时间窗口内限制请求数量。
+  - 把时间以一定比例分片：例如我们的**接口限流每分钟处理 60 个请求**，我们可以把 1 分钟分为 60 个窗口。每隔 1 秒移动一次，每个窗口一秒只能处理不大于 `60(请求数)/60（窗口数）` 的请求， 如果当前窗口的请求计数总和超过了限制的数量的话就不再处理其他请求。
 - **令牌桶算法**：通过令牌桶控制请求速率。
-- **漏桶算法**：通过漏桶控制请求速率。
+  - 如果桶装满了，就不能继续往里面继续添加令牌了。
+- **漏桶算法**：通过漏桶控制请求速率。（基本不用）
+  - 缺点
+    - 无法应对突然激增的流量，因为只能以固定的速率处理请求
+    - 桶流入水（发请求）的速率如果一直大于桶流出水（处理请求）的速率的话，那么桶会一直是满的，一部分新的请求会被丢弃，导致服务质量下降。
 
 ## 4.Cookie和Session
 
