--- a/计算机网络/传输层.md
+++ b/计算机网络/传输层.md
@@ -3,3 +3,18 @@
 发送方和接收方在内核各自都有一个缓冲区，发送缓冲区和接收缓冲区上都各有一个窗口，发送方的窗口表示可发送的最大数据量，接收方的窗口表示可接收的最大数据量，
 发送方有了发送窗口后，那么发送方可以不用等待已发送数据的确认报文，就可以继续发送下一批数据，提高了发送的速率，
 接收方有了接收窗口后，可以实现流量控制，把接收方的接收窗口告诉给发送方，让发送方按自己的接收情况来发送数据，避免发送方发送的数据过快，导致接收方处理不过来。
+
+## 2.TCP的拥塞控制
+
+TCP协议能够根据网络状况动态调整发送速率，避免因为过大的流量导致网络拥塞。导致数据包丢失、延迟增加等问题。
+
+拥塞控制算法有慢启动、拥塞避免、超时重传、快恢复
+
+1.慢启动:
+
+​	发送方开始时设置一个较小的拥塞窗口大小，
+​	然后每收到一个确认，窗口大小就翻倍，以指数方式增长，直到拥塞控制窗口达到**慢启动门限**。
+2拥塞避免:当窗口大小达到慢启动门限后，就进入拥塞避免阶段，此时拥塞窗口大小每收到一个确认，就增加一个报文段的大小，以**线性方式增长**。
+3.拥塞发生:随着发送速率慢慢增长，**可能网络会出现拥塞，发生了数据包丢失，这时候就需要重传数据，重传机制主要有两种**，一个是超时重传和快速重传。
+​	3.1超时重传:当发生了超时重传（发送方在超时时间内未收到ACK），慢启动门限会设置为拥塞窗口的一半，并且将拥塞窗口恢复为初始值，接着,就重新开始慢启动，发送速率就会瞬间下降了很多。
+​	3.2快速重传和快速恢复:当发送方连续收到三个重复确认时，就认为发生了丢包，此时**拥塞窗口门限**会被设置为当前拥塞窗口的一半，拥塞窗口被设置成门限+3大小，是为了补偿已经收到的 3 个重复 ACK，表示有 3 个数据包已经成功到达接收方。
