--- a/MySQL/索引.md
+++ b/MySQL/索引.md
@@ -48,6 +48,10 @@
 - 主键索引通常用于快速定位和唯一标识表中的特定行，而聚簇索引可以加速范围查询和特定值查询，因为它们按顺序存储数据行。
 - 一个表只能有一个聚簇索引，通常与主键索引相关联，但可以有多个非聚簇索引（例如，唯一索引、复合索引等）     
 
+#### 二级索引
+
+一张表只能有一个聚簇索引，二级索引是基于表中的其他列（非主键列）构建的。叶子结点存放的是主键值
+
 #### 组合索引
 
 ​	组合索引（Compound Index）是指由多个列所组合而成的 B+树索引，之前是对一个列排序，现在是对多个列排序。
