--- a/java/面试/java基础/常见问题.md
+++ b/java/面试/java基础/常见问题.md
@@ -467,3 +467,36 @@ public class Main {
 
 ```
 
+#### 33.Java各种引用
+
+1.强引用
+
+- 最常见的引用类型。只要强引用存在，垃圾回收器就不会回收该对象。
+
+  ```java
+  Object obj = new Object(); // obj 是强引用
+  ```
+
+  强引用指向的对象不会被垃圾回收，即使内存不足时也不会回收。
+
+  如果强引用被置为 `null`，对象就可以被垃圾回收。
+
+2.弱引用
+
+- 用于描述非必需的对象。垃圾回收器一旦发现弱引用指向的对象，就会立即回收它。
+
+  ```java
+  WeakReference<Object> weakRef = new WeakReference<>(new Object());
+  Object obj = weakRef.get(); // 获取弱引用指向的对象
+  
+  这个obj是弱引用指向的对象。当垃圾回收器（GC）运行时，如果发现这个 Object 实例只有弱引用指向它，而没有强引用指向它，那么它就会被回收。
+  weakRef 是一个强引用，指向 WeakReference 对象本身。
+  WeakReference 对象不会被回收，除非 weakRef 被置为 null 或超出作用域。
+  ```
+
+3.虚引用
+
+- 用于**跟踪对象被垃圾回收**的状态。虚引用指向的对象无法通过 `get()` 方法获取
+
+- 虚引用主要用于跟踪对象被垃圾回收的状态，通常与 `ReferenceQueue` 结合使用。
+- 当对象被垃圾回收时，虚引用会被加入到 `ReferenceQueue` 中，可以通过队列进行后续处理。
