--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -379,10 +379,18 @@ ReentrantLock 是 JDK 层面实现的（也就是 API 层面，需要 lock() 和
 #### 16.ThreadLocal 有什么用？（用ThreadLocal存放用户信息有什么好处）
 
 ```java
+/*每个线程内部维护了一个 ThreadLocalMap，用于存储线程本地变量。
+	ThreadLocalMap 的键是 ThreadLocal 实例，值是线程本地变量。
+	ThreadLocalMap 的键是弱引用（WeakReference），而值是强引用。*/
 ThreadLocal是Java中提供的线程本地存储机制，可以利用该机制将数据缓存在某个线程内部，该线程可以在任意时刻，任意方法中获取缓存的数据。
 ThreadLocal类主要解决的就是让每个线程绑定自己的值，可以将ThreadLocal类形象的比喻成存放数据的盒子，盒子中可以存储每个线程的私有数据。
 每个Thread中都具备一个ThreadLocalMap，而ThreadLocalMap可以存储以ThreadLocal为 key，value 是 ThreadLocal 对象调用set方法设置的值。
-
+/*键是弱引用，意味着当 ThreadLocal 实例不再被强引用时，垃圾回收器可以回收它。这样可以避免 ThreadLocal 实例本身导致的内存泄漏。
+值是强引用，确保线程本地变量在 ThreadLocal 实例被回收后仍然存在。可以保证线程本地变量的生命周期与线程绑定，而不是与 ThreadLocal 实例绑定。*/
+ThreadLocal<String> threadLocal = new ThreadLocal<>();
+threadLocal.set("value");
+threadLocal = null; // 不再持有强引用,此时threadLocal对象可被回收
+    
 在并发环境下，每个线程都有自己独立的用户上下文信息，在并发环境下正确保存用户数据
 1.1 线程隔离
 原理：ThreadLocal 为每个线程提供独立的变量副本，确保线程之间的数据隔离。
@@ -397,9 +405,9 @@ ThreadLocal类主要解决的就是让每个线程绑定自己的值，可以将
 无需在方法参数中显式传递。
 ```
 
-#### 	Thread内存泄漏
+#### 	ThreadLocal内存泄漏
 
-- **原因**：`ThreadLocal` 的键（`ThreadLocal` 对象本身）是弱引用（WeakReference），当没有强引用指向 `ThreadLocal` 对象时，它会被垃圾回收。
+- **原因**：`ThreadLocal` 的键（`ThreadLocal` 对象本身）是弱引用（WeakReference），值是强引用，当没有强引用指向 `ThreadLocal` 对象时，它会被垃圾回收。
 
 - **问题**：键被回收后，值（存储在 `ThreadLocalMap` 中的对象）仍然存在，但无法通过 `ThreadLocal` 访问，造成内存泄漏。
 
