--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -513,7 +513,20 @@ FixedThreadPool 使用的是LinkedBlockingQueue（无界队列），由于队列
 抽象队列同步器,AQS 就是一个抽象类，主要用来构建锁和同步器。（ReentrantLock、CountDownLatch、Semaphore等都是基于AQS实现）
 AQS 核心思想是，如果被请求的共享资源空闲，则将当前请求资源的线程设置为有效的工作线程，并且将共享资源设置为锁定状态。如果被请求的共享资源被占用，那么就需要一套线程阻塞等待以及被唤醒时锁分配的机制，这个机制 AQS 是用 CLH 队列锁 实现的，即将暂时获取不到锁的线程加入到队列中。
 通过一个整数（state）来表示同步状态，并通过一个先进先出（FIFO）的队列来管理那些获取同步状态失败的线程。
-    
+对于state：
+    **ReentrantLock**：
+        state 表示锁的持有状态：
+        state = 0：锁未被任何线程持有。
+        state > 0：锁被某个线程持有，state 的值表示该线程重入锁的次数。
+    **Semaphore**：
+        state 表示当前可用的许可证数量：
+        state = 0：没有可用的许可证。
+        state > 0：有可用的许可证，state 的值表示剩余许可证的数量。
+    **CountDownLatch**：
+        state 表示剩余的计数器值：
+        state = 0：计数器已归零，所有等待的线程可以继续执行。
+        state > 0：计数器未归零，等待的线程需要继续阻塞。
+     
 CLH(Craig,Landin,and Hagersten) 队列是一个虚拟的双向队列（虚拟的双向队列即不存在队列实例，仅存在结点之间的关联关系）。AQS 是将每条请求共享资源的线程封装成一个 CLH 锁队列的一个结点（Node）来实现锁的分配。在 /*CLH 同步队列中，一个节点表示一个线程*/，它保存着线程的引用（thread）、 当前节点在队列中的状态（waitStatus）、前驱节点（prev）、后继节点（next）。
 ```
 
