--- a/java/Redis/面试题.md
+++ b/java/Redis/面试题.md
@@ -200,7 +200,19 @@ hash表：
 
 缓存穿透：指访问的key缓存和数据库都没有，但用户一直发出请求，导致请求都去查询数据库，使得数据库压力过大宕机。
 
+​	**解决方法：**
+
+​		缓存无效key
+
+​		布隆过滤器：迅速判断一个key是否在缓存中，使用一个较大的 bit 数组来保存所有的数据，数组中的每个元素都只占用 1 bit ，并且每个元素只能是 0 或者 1（代表 false 或者 true）：把所有可能存在的请求的值都存放在布隆过滤器中，当用户请求过来，先判断用户发来的请求的值是否存在于布隆过滤器中。不存在的话，直接返回请求参数错误信息给客户端，存在的话才会走下面的流程。
+
 缓存击穿：一般指某个热点数据在缓存中没有，数据库有，突然查询量过大使得数据库压力骤增
+
+​	**解决方法：**
+
+​		**提前预热**（推荐）：针对热点数据提前预热，将其存入缓存中并设置合理的过期时间比如秒杀场景下的数据在秒杀结束之前不过期。
+
+​	**加锁**（看情况）：在缓存失效后，通过设置互斥锁确保只有一个请求去查询数据库并更新缓存
 
 缓存雪崩：某一时间内大批量数据过期，此时大量请求查询数据库导致数据库压力过大
 
@@ -281,3 +293,11 @@ hash表：
    - 适用于优先删除即将过期数据的场景。
 
 #### 35.Redis的缓存一致性如何保证
+
+Cache Aside Pattern 中遇到写请求是这样的：更新数据库，然后直接删除缓存。
+
+如果更新数据库成功，而删除缓存这一步失败的情况的话，简单说有两个解决方案：
+
+1. **缓存失效时间变短**（不推荐，治标不治本）：我们让缓存数据的过期时间变短，这样的话缓存就会从数据库中加载数据。另外，这种解决办法对于先操作缓存后操作数据库的场景不适用。
+2. **增加缓存更新重试机制**（常用）：如果缓存服务当前不可用导致缓存删除失败的话，我们就隔一段时间进行重试，重试次数可以自己定。不过，这里更适合引入消息队列实现异步重试，将删除缓存重试的消息投递到消息队列，然后由专门的消费者来重试，直到成功。虽然说多引入了一个消息队列，但其整体带来的收益还是要更高一些。
+
