--- a/java/面试/java基础/常见问题.md
+++ b/java/面试/java基础/常见问题.md
@@ -500,3 +500,17 @@ public class Main {
 
 - 虚引用主要用于跟踪对象被垃圾回收的状态，通常与 `ReferenceQueue` 结合使用。
 - 当对象被垃圾回收时，虚引用会被加入到 `ReferenceQueue` 中，可以通过队列进行后续处理。
+
+#### 34.Java的不可变类
+
+指创建后对象的字段无法被修改的类，一旦对象被创建，所有属性都不能被修改
+
+**关键特征：**
+
+​	1.声明类为final，不可被继承
+
+​	2.类的所有字段是private和final，初始化后不可被修改
+
+​	3.通过构造函数初始化所有字段
+
+​	4.不提供修改对象状态的方法（setter）
