--- a/java/面试/jvm/常见问题.md
+++ b/java/面试/jvm/常见问题.md
@@ -29,7 +29,7 @@
 Java 自动内存管理最核心的功能是 堆 内存中对象的分配与回收。Java 堆是垃圾收集器管理的主要区域，因此也被称作 GC 堆（Garbage Collected Heap）。
 /*1.内存分配和回收原则*/
 对象在新生代中 Eden 区分配。当 Eden 区没有足够空间进行分配时，虚拟机将发起一次 Minor GC。
-清理年轻代：Minor GC 主要针对年轻代进行垃圾回收。在年轻代中，新创建的对象首先被放入 Eden 区，当 Eden 区满时，触发 Minor GC，将不再活跃的对象回收。活跃对象会被移动到 Survivor 区，并且在多次 Minor GC 后仍然存活的对象会被晋升到老年代。
+清理年轻代：/*Minor GC 主要针对年轻代进行垃圾回收。在年轻代中，新创建的对象首先被放入 Eden 区，当 Eden 区满时，触发 Minor GC，将不再活跃的对象回收。活跃对象会被移动到 Survivor 区，并且在多次 Minor GC 后仍然存活的对象会被晋升到老年代。*/
 /*大对象就是需要大量连续内存空间的对象（比如：字符串、数组）,直接进入老年代、长期存活的对象将进入老年代*/
 对象都会首先在 Eden 区域分配。如果对象在 Eden 出生并经过第一次 Minor GC 后仍然能够存活，并且能被 Survivor 容纳的话，将被移动到 Survivor 空间（s0 或者 s1）中，并将对象年龄设为 1(Eden 区->Survivor 区后对象的初始年龄变为 1)。
 对象在 Survivor 中每熬过一次 MinorGC,年龄就增加 1 岁，当它的年龄增加到一定程度（默认为 15 岁），就会被晋升到老年代中。对象晋升到老年代的年龄阈值，可以通过参数 -XX:MaxTenuringThreshold 来设置。
