--- a/java/面试/java基础/常见问题.md
+++ b/java/面试/java基础/常见问题.md
@@ -338,6 +338,8 @@ class OuterClass {
 
 **匿名内部类**是一种没有名字的内部类。它是在**创建对象的同时定义类的一种方式**，通常用于只需要使用一次的类，并且是**作为某个接口或者抽象类的实现**（或者某个类的子类）出现。在下面实现接口的例子中，匿名内部类是在`main`方法内部定义的，它的行为可能会受到`main`方法中的其他变量或者外部类的状态的影响。
 
+当需要实现一个接口/继承一个类但不想定义一个类时，可以使用匿名内部类
+
 ```java
 interface MyInterface {
     void myMethod();
