--- a/java/面试/java集合/常见问题.md
+++ b/java/面试/java集合/常见问题.md
@@ -14,9 +14,20 @@
 
 #### 2.ArrayList的扩容机制
 
-```
+```java
 如果在创建ArrayList时没有指定大小，会先将其扩容到大小为10，添加第11个元素的时候，扩容至1.5倍
-如果新容量大于 MAX_ARRAY_SIZE,进入(执行) hugeCapacity() 方法来比较 minCapacity 和 MAX_ARRAY_SIZE，如果 minCapacity 大于最大容量，则新容量则为Integer.MAX_VALUE，否则，新容量大小则为 MAX_ARRAY_SIZE 即为 Integer.MAX_VALUE - 8。
+​计算新容量：
+新容量通常是当前容量的 ​1.5 倍​（即 oldCapacity + (oldCapacity >> 1)）。
+如果新容量仍然不足以容纳新增元素，则直接将新容量/*设置为所需的最小容量*/。
+​创建新数组：
+创建一个新的数组，大小为计算得到的新容量。
+​复制元素：
+将旧数组中的所有元素复制到新数组中。
+​更新引用：
+将 ArrayList 的内部数组引用指向新数组。
+最大容量
+ArrayList 的最大容量为 Integer.MAX_VALUE - 8（即 2^31−8）。
+如果所需容量超过最大容量，会抛出 OutOfMemoryError。
 ```
 
 #### 3.Set：Comparable 和 Comparator 的区别
@@ -138,8 +149,15 @@ TreeMap 和HashMap 都继承自AbstractMap ，但是需要注意的是TreeMap它
 
 #### HashMap会有哪些问题
 
-```
+```java
 HashMap 不是线程安全的。在多线程环境下，多个线程同时修改 HashMap 可能导致数据不一致或死循环等问题。
+数据丢失：
+扩容操作：1.计算新容量 2.创建新数组 3.重新hash 4.复制数据
+/*在多线程环境下，多个线程可能同时执行这些步骤，导致状态不一致。*/
+	假设有两个线程 A 和 B：
+	线程 A 检测到 HashMap 需要扩容，并开始创建新的数组。
+	线程 B 在线程 A 完成扩容之前，向 HashMap 中添加了一个新的元素。
+	线程 A 完成扩容后，可能没有考虑到线程 B 添加的新元素，从而导致数据丢失。
 
 业务场景：例如在电商系统中，多个用户同时下单，库存的扣减操作可能会同时修改库存数据。如果使用 HashMap 来存储库存信息，可能会导致库存数据错误。
 ```
@@ -264,6 +282,16 @@ public class HashMapTest {
 ```
 
 ![](D:\学习笔记\java\pictures\Snipaste_2023-12-16_18-16-16.png)
+
+#### 为什么ConcurrentHashMap扩容时候没有问题？
+
+ **（1）锁住单个桶**
+
+**（2）逐步迁移数据**
+
+**（3）使用ForwardingNode标记已经迁移的桶**
+
+
 
 #### 9.ConcurrentHashMap不能保证符合操作的原子性
 
