--- a/计算机网络/应用层.md
+++ b/计算机网络/应用层.md
@@ -41,14 +41,35 @@
      - 服务器选择的加密套件。
      - 一个随机数（Server Random）。
 3. **服务器证书（Server Certificate）**
+
    - 服务器向客户端发送其数字证书，通常由受信任的证书颁发机构（CA）签发。证书包含**服务器的公钥。**
+
+     证书链：
+
+     ​	（1）终端实体证书：服务器证书，用于验证服务器的身份。
+
+     ​	（2）中间证书：验证终端实体证书的合法性。
+
+     ​	（3）根证书：验证中间证书的合法性。
+
+     客户端验证过程：
+
+     ​	1.获取证书链
+
+     ​	2.验证终端实体证书：使用中间证书的公钥验证终端实体证书的签名。（检查终端实体证书的有效期、域名等信息。）
+
+     ​	3.验证中间证书：使用根证书的公钥验证中间证书的签名。（检查中间证书的有效期等信息）
 4. **服务器密钥交换（Server Key Exchange，可选）**
+   
    - 如果需要，服务器可以发送额外的密钥交换参数。
 5. **客户端密钥交换（Client Key Exchange）**
+   
    - 客户端生成一个预主密钥（Pre-Master Secret），并**使用服务器的公钥对其进行加密**，然后发送给服务器。服务器使用私钥解密
 6. **更改加密规格（Change Cipher Spec）**
+   
    - 客户端和服务器各自发送一个`Change Cipher Spec`消息，表示从现在开始使用加密通道进行通信。
 7. **完成（Finished）**
+   
    - 客户端和服务器各自发送一个`Finished`消息，验证握手过程是否成功完成。
 
 #### （2）**加密通信阶段**
