--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -35,8 +35,8 @@
 NEW: 初始状态，线程被创建出来但没有被调用 start() 。
 RUNNABLE: 运行状态，线程被调用了 start()等待运行的状态。
 BLOCKED：阻塞状态，需要等待锁释放。/*放入锁的同步队列，获得同步锁后，回到就绪态*/
-WAITING：等待状态，表示该线程需要等待其他线程做出一些特定动作（通知或中断）。/* 放入锁等待序列
-TIME_WAITING：超时等待状态，可以在指定的时间后自行返回而不是像 WAITING 那样一直等待。经过唤醒成运行态   */
+WAITING：等待状态，表示该线程需要等待其他线程做出一些特定动作（通知或中断）。/* 放入锁等待序列*/wait() 会释放锁
+TIME_WAITING：超时等待状态，可以在指定的时间后自行返回而不是像 WAITING 那样一直等待。经过唤醒成运行态   */sleep()不释放锁
 TERMINATED：终止状态，表示该线程已经运行完毕。
 ```
 
@@ -125,6 +125,36 @@ public class Main {
         }
     }
 }
+```
+
+##### 7.3join()方法
+
+是 Java 中用于 **线程同步** 的一个重要方法。它的作用是让当前线程等待另一个线程执行完毕，然后再继续执行。
+
+- 常用于主线程等待子线程执行完毕后再继续执行。
+
+```java
+public class JoinExample {
+    public static void main(String[] args) throws InterruptedException {
+        Thread thread = new Thread(() -> {
+            System.out.println("Thread is running");
+            try {
+                Thread.sleep(3000);  // 模拟耗时操作
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("Thread finished");
+        });
+
+        thread.start();  // 启动线程
+        thread.join();   // 主线程等待 thread 执行完毕
+        System.out.println("Main thread finished");
+    }
+}
+//主线程调用 thread.join() 后，会等待 thread 执行完毕，然后再继续执行。
+Thread is running
+Thread finished
+Main thread finished
 ```
 
 #### 8.可以直接调用 Thread 类的 run 方法吗？
@@ -612,7 +642,9 @@ public class AwaitExample {
 
 ```
 
-#### 23.多线程创建方式
+#### 23.多线程创建方式（线程创建方式的比较）
+
+![](D:\学习笔记\java\pictures\Snipaste_2025-03-25_09-38-01.png)
 
 继承Thread类
 
