--- a/java/Redis/面试题.md
+++ b/java/Redis/面试题.md
@@ -238,6 +238,19 @@ hash表：
 2. **更新数据库**：执行数据库更新操作。
 3. **第二次删除**：在数据库更新完成后，延迟一段时间再次删除缓存。（为了防止在数据库更新过程中，其他线程读取到旧数据并重新写入缓存。）
 
+**更新缓存的问题：**
+
+- **场景**：多个线程同时更新数据库和缓存时，可能由于执行顺序问题导致缓存与数据库不一致。
+
+  示例：
+
+  1. **线程 A** 更新数据库 `set stock = 90`。
+  2. **线程 B** 更新数据库 `set stock = 80`。
+  3. **线程 B** 先更新缓存 `Redis.set("stock", 80)`。
+  4. **线程 A** 后更新缓存 `Redis.set("stock", 90)`。
+
+- **结果**：数据库最终值是 `80`，但缓存是 `90`（脏数据）。
+
 #### 34.Redis过期删除和内存淘汰
 
 #####  1.**定期删除**
