--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -406,6 +406,39 @@ ReentrantLock 是 JDK 层面实现的（也就是 API 层面，需要 lock() 和
   2.可实现公平锁 :ReentrantLock可以指定是公平锁还是非公平锁。而synchronized只能是非公平锁。所谓的公平锁就是先等待的线程先获得锁。ReentrantLock默认情况是非公平的，可以通过 ReentrantLock类的ReentrantLock(boolean fair)构造方法来指定是否是公平的。
 ```
 
+#### 15.1sychronized和ReentrantLock可重入的原理
+
+#### 	（1）sychronized
+
+​	可重入性由 **对象头（Object Header）** 和 **Monitor（监视器）** 实现。
+
+##### **对象头与 Monitor**
+
+- 每个 Java 对象在内存中都有一个 **对象头**，其中包含锁信息。
+- 当线程进入sychronized代码块时，JVM 会检查对象头的锁状态：
+  - **无锁状态**：线程获取锁，记录锁持有者（当前线程）。
+  - **已锁定（当前线程持有）**：锁计数器（`recursions`）**+1**（可重入）。
+  - **已锁定（其他线程持有）**：线程阻塞。
+
+##### **锁计数器**
+
+- JVM 在 Monitor（监视器）中维护了一个recursions（重入计数器）：
+
+  - 线程首次获取锁时，`recursions = 1`。
+  - 每次重入（如递归调用），`recursions++`。
+  - 退出 `synchronized` 块时，`recursions--`，直到 `recursions = 0` 时释放锁。
+
+  #### （2）ReentrantLock
+
+  通过AQS实现：
+
+  - 首次加锁：
+    - `state = 1`，`exclusiveOwnerThread = currentThread`。
+  - 重入加锁：
+    - 检查 `exclusiveOwnerThread == currentThread`，如果是，`state++`。
+  - 释放锁：
+    - `state--`，直到 `state = 0` 时完全释放锁。
+
 #### 16.ThreadLocal 有什么用？（用ThreadLocal存放用户信息有什么好处）
 
 ```java
