--- a/MySQL/日志.md
+++ b/MySQL/日志.md
@@ -1,8 +1,8 @@
 #### undo log、redo log、bin log的作用
 
-​	undo log 是一种用于撤销回退的日志。在事务没提交之前，MySQL 会先记录更新前的数据到 undo log 日志文件里面，当事务回滚时，可以利用 undo log 来进行回滚
+​	undo log： 一种用于撤销回退的日志。在事务没提交之前，MySQL 会先记录更新前的数据到 undo log 日志文件里面，当事务回滚时，可以利用 undo log 来进行回滚
 
-redo log的作用：是 Innodb 存储引擎层生成的日志，实现了事务中的**持久性**，主要**用于掉电等故障恢复**；
+​	redo log：是 Innodb 存储引擎层生成的日志，实现了事务中的**持久性**，主要**用于掉电等故障恢复**；
 
 ### 有了undolog为啥还需要redolog呢？
 
