--- a/java/Redis/面试题.md
+++ b/java/Redis/面试题.md
@@ -216,27 +216,31 @@ hash表：
 
 **缓存雪崩：**某一时间内大批量数据过期，此时大量请求查询数据库导致数据库压力过大
 
-#### 33.延迟双删
+#### 33.如何保障数据库和Redis的一致性
 
-**延迟双删**（Delay Double Delete）是一种在数据更新或删除时为了保证[数据一致性](https://so.csdn.net/so/search?q=数据一致性&spm=1001.2101.3001.7020)而采取的策略。这种策略通常用于解决数据在缓存和数据库中不一致的问题。
+#### 一.Redis做旁路缓存
 
-**更新缓存模式**：每次更新数据库都更新缓存，无效写操作较多
+先查Redis缓存，没有从MySQL查出数据写入到Redis缓存，更新时更新MySQL并删除缓存，确保下次读取到的是新数据。
 
-**删除缓存模式**：更新数据时更新数据库并删除缓存，查询时更新缓存，无效写操作较少，那么是先操作缓存还是先操作数据库？
+**解决方法：**
 
-​	如何操作呢？
-
-​	**先操作缓存**：先删缓存，再更新数据库。请求直接到数据库，给数据库带来巨大压力
-
-​	**先操作数据库**：先更新数据库，再删缓存。当线程1在查询缓存且未命中，此时线程1查询数据，查询完准备写入缓存时，由于没有加锁线程2乘虚而入，线程2在这期间对数据库进行了更新，此时线程1将旧数据返回了，出现了脏读，但是这种概率很小
-
-#### 如果就想先操作缓存，再更新数据库怎么办？
-
-延迟双删：当需要更新数据库中的数据时，首先会先删除缓存，然后再进行数据库的更新操作。这样做的目的是**为了避免在数据库更新的过程中，有其他请求读取了已经失效的缓存数据。**
+**延迟双删：**当需要更新数据库中的数据时，首先会先删除缓存，然后再进行数据库的更新操作。这样做的目的是**为了避免在数据库更新的过程中，有其他请求读取了已经失效的缓存数据。**
 
 1. **第一次删除**：在更新数据库之前，先删除缓存。（因为数据库需要更新，在更新数据库之前，先删除缓存，确保后续读取操作不会命中旧数据。）
 2. **更新数据库**：执行数据库更新操作。
 3. **第二次删除**：在数据库更新完成后，延迟一段时间再次删除缓存。（为了防止在数据库更新过程中，其他线程读取到旧数据并重新写入缓存。）
+
+![](D:\学习笔记\java\pictures\Snipaste_2025-03-31_09-25-40.png)
+
+**适用场景：**
+
+读取商品详情信息
+
+#### 二.先更新缓存再更新数据库方式
+
+**更新缓存模式**：在要求实时性较高的情况中，先更新Redis缓存，再使用消息队列异步更新MySQL
+
+**场景：**秒杀场景查商品库存，先写入到Redis缓存中
 
 **更新缓存的问题：**
 
@@ -305,16 +309,7 @@ hash表：
    - 从设置了过期时间的键中删除剩余生存时间（TTL）最短的键。
    - 适用于优先删除即将过期数据的场景。
 
-#### 35.Redis的缓存一致性如何保证
-
-Cache Aside Pattern 中遇到写请求是这样的：更新数据库，然后直接删除缓存。
-
-如果更新数据库成功，而删除缓存这一步失败的情况的话，简单说有两个解决方案：
-
-1. **缓存失效时间变短**（不推荐，治标不治本）：我们让缓存数据的过期时间变短，这样的话缓存就会从数据库中加载数据。另外，这种解决办法对于先操作缓存后操作数据库的场景不适用。
-2. **增加缓存更新重试机制**（常用）：如果缓存服务当前不可用导致缓存删除失败的话，我们就隔一段时间进行重试，重试次数可以自己定。不过，这里更适合引入消息队列实现异步重试，将删除缓存重试的消息投递到消息队列，然后由专门的消费者来重试，直到成功。虽然说多引入了一个消息队列，但其整体带来的收益还是要更高一些。
-
-#### 36.Redis如何保证高可用
+#### 35.Redis如何保证高可用
 
 ##### **1. 主从复制（Replication）**
 
@@ -327,7 +322,7 @@ Cache Aside Pattern 中遇到写请求是这样的：更新数据库，然后直
 ##### **2. 哨兵模式（Sentinel）**
 
 - 哨兵模式是 Redis 官方提供的高可用解决方案。
-- 哨兵节点监控主节点和从节点的状态，当主节点发生故障时，自动将一个从节点提升为新的主节点。
+- 哨兵节点监控主节点和从节 点的状态，当主节点发生故障时，自动将一个从节点提升为新的主节点。
   - 自动故障转移：主节点故障时，哨兵会自动将从节点提升为主节点。
   - 高可用性：多个哨兵节点可以组成集群，避免单点故障。
 
