--- a/java/面试/jvm/常见问题.md
+++ b/java/面试/jvm/常见问题.md
@@ -23,6 +23,49 @@
 
 ![Snipaste_2023-12-19_14-27-16](D:\学习笔记\java\pictures\Snipaste_2023-12-19_14-27-16.png)
 
+#### JVM内存结构
+
+1.程序计数器
+
+- **线程私有**的内存区域
+- 记录当前线程所执行的字节码的行号指示器
+- 执行 Java 方法时记录虚拟机字节码指令地址
+
+2.本地方法栈
+
+- **线程私有**的内存区域
+- 为 JVM 使用到的 Native 方法服务（System.currentTimeMillis()）
+
+3.JVM方法栈
+
+- **线程私有**的内存区域
+- 生命周期与线程相同
+- 存储**栈帧**(Stack Frame)，每个方法执行时会创建一个栈帧
+- 栈帧包含：
+  - 局部变量表(Local Variable Table)
+  - 操作数栈(Operand Stack)
+  - 动态链接(Dynamic Linking)
+  - 方法返回地址(Return Address)
+
+4.堆区域
+
+- **线程共享**的内存区域
+- 虚拟机启动时创建
+- 存放**对象实例**和**数组**
+
+5.方法区
+
+- **线程共享**的内存区域
+- 存储已被虚拟机加载的：
+  - 类信息
+  - 常量
+  - 静态变量
+  - 即时编译器编译后的代码等数据
+
+6.本地内存
+
+- 元空间：类元数据、方法元信息、方法字节码
+
 #### 2.垃圾回收
 
 ```java
@@ -213,6 +256,16 @@ GC 其实准确分类只有两大种：
 ​职责
 负责加载用户类路径（classpath）下的类。
 这些类是用户自定义的类或第三方库。
+    
+双亲委派机制加载类的好处：
+1. 安全性保障
+​防止核心类被篡改：确保Java核心库（如java.lang包）只能由Bootstrap类加载器加载，避免恶意代码替换JDK核心类
+​沙箱保护：自定义类无法冒充或替换JVM信任的核心类，维护了Java安全模型
+​代码来源可控：通过委派链明确每个类的加载来源，便于实施安全策略
+2. 避免类重复加载
+​唯一性保证：同一个类在不同类加载器环境中只会被加载一次（由最先遇到的父加载器加载）
+​节省内存：避免相同类被多次加载造成内存浪费
+​一致性维护：确保全系统看到的都是同一个Class对象，防止类型混淆 
 ```
 
 #### 打破双亲委派机制
