--- a/java/面试/java集合/常见问题.md
+++ b/java/面试/java集合/常见问题.md
@@ -445,3 +445,70 @@ public class FastFailExample {
 - **读操作无锁**：读操作**不需要**加锁，性能高。
 - **写操作加锁**：写操作**需要**加锁，性能较低。
 - **数据一致性**：读操作**只能看到写操作完成之前的数据**，不能保证实时一致性。
+
+#### 13.PriorityQueue的实现
+
+基于优先级堆（Priority Heap）实现的无界优先级队列。
+
+##### 底层数据结构
+
+1. **数组存储**：内部使用 `Object[] queue` 数组存储元素
+2. **堆性质：**
+   - 最小堆：**默认情况下**，父节点 <= 子节点（可通过比较器改变）
+   - 索引关系：
+     - 父节点索引 = (子节点索引 - 1) / 2
+     - 左子节点索引 = 父节点索引 * 2 + 1
+     - 右子节点索引 = 父节点索引 * 2 + 2
+
+```java
+//创建大根堆
+PriorityQueue<Integer> maxHeap = new PriorityQueue<>((a, b) -> b - a);
+```
+
+##### 常用方法
+
+add（）
+
+peek（）
+
+poll（）、remove（）
+
+size（）
+
+clear（）
+
+toArray（）
+
+```java
+PriorityQueue<Integer> pq = new PriorityQueue<>();
+pq.add(3);
+pq.add(1);
+pq.add(2);
+
+Object[] objArray = pq.toArray();
+// 需要手动转换类型
+Integer first = (Integer) objArray[0]; // 1（但不一定，顺序不保证！）
+
+// 情况1：传入数组长度足够
+Integer[] array1 = new Integer[3];
+Integer[] result1 = pq.toArray(array1); 
+// array1 == result1，内容为堆结构的顺序（不保证排序）
+
+// 情况2：传入数组长度不足
+Integer[] array2 = new Integer[1]; 
+Integer[] result2 = pq.toArray(array2);
+// result2是新数组，长度=3，array2不变
+
+// 情况3：传入数组长度超过
+Integer[] array3 = new Integer[5];
+Integer[] result3 = pq.toArray(array3);
+// result3 == array3，前3位是元素，后2位是null
+
+//获取有序的数组或者列表
+// 正确做法：通过反复poll()获取有序结果
+List<Integer> sortedList = new ArrayList<>();
+while (!pq.isEmpty()) {
+    sortedList.add(pq.poll()); // 保证从小到大取出
+}
+```
+
