--- a/场景题/面试题.md
+++ b/场景题/面试题.md
@@ -97,3 +97,27 @@
 
 第一种，也最简单的方式，在投递MQ失败的情况下，增加渐进式重试;
 第二种，重更安全一点，就是在第一种的基础上，将这条消息记录在磁盘上，慢慢重试;
+
+## 4.如何设计二维码扫码系统？
+
+通过已经登录的app端应用扫描未登录的web端程序的二维码
+
+![](D:\学习笔记\场景题\pictures\Snipaste_2025-04-02_15-32-34.png)
+
+![Snipaste_2025-04-02_15-33-49](D:\学习笔记\场景题\pictures\Snipaste_2025-04-02_15-33-49.png)
+
+此时网页端显示二维码状态为已扫码，app端状态为确认登录
+
+![Snipaste_2025-04-02_15-34-15](D:\学习笔记\场景题\pictures\Snipaste_2025-04-02_15-34-15.png)
+
+![](D:\学习笔记\场景题\pictures\Snipaste_2025-04-02_15-38-45.png)
+
+## 5.如何设计一个短链接？
+
+短链系统是将长URL转换为短字符串的服务
+
+节省字数，各种平台发文有字数限制
+
+![](D:\学习笔记\场景题\pictures\Snipaste_2025-04-02_16-32-38.png)
+
+![](D:\学习笔记\场景题\pictures\Snipaste_2025-04-02_16-35-11.png)
